# open-semantic-boundary-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: pilot_v0.1.1.yaml
docs/: ACCEPTANCE.md  adoption_path.md  extension_points.md  paper_to_repo.md  repo_map.md  what-is-semantic-boundary.md
eval/: merge_sensitivity.py  run_additional_analyses.py  run_analytics_study.py  run_analytics_tier1_resume.py  run_bootstrap_cis.py  run_cohort_tier1.py  run_figures.py  run_obs_study.py  run_operative_selection.py  run_retention.py  run_tier1_resume.py
examples/: README.md
open-sbb/: LAYOUT-PLAN.md  README.md
scripts/: build_split_manifest_v0.py  consolidate_eval_cache.py  consolidate_llm_cache.py  export_mermaid_figure.py  export_mermaid_figure.sh  generate_provenance_targets.py  materialize_llm_cache.py  monitor_tier1_obs.sh  repro_smoke.py  run_ollama_parallel.py  run_pipeline.sh  run_tier1_primary.sh  run_tier1_serial.sh  validate_corpus.py  warm_llm_cache.py  zenodo_opensbb_v0.1.2_description.html
tests/: test_additional_analyses.py  test_adversary_trial4.py  test_advisor_figures.py  test_analytics_map.py  test_analytics_task.py  test_analytics_transform.py  test_bootstrap_cis.py  test_boundary.py  test_boundary_bundle.py  test_byo_exports.py  test_eval.py  test_eval_cache_io.py  test_figures.py  test_figures_v2.py  test_frozen_tier.py  test_generate.py  test_llm_materialize.py  test_llm_sanitize_batch.py  test_ollama_pool.py  test_provenance_targets.py  test_retention.py  test_tier1_consumer.py  (+6 more)
(+237 files in other folders)
