[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-semantic-boundary-benchmark"
version = "0.1.1"
description = "Open Semantic Boundary Benchmark (SBB-Obs + SBB-Analytics pilot v0.1.1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "jsonschema>=4.20",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "httpx>=0.27",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
embeddings = ["sentence-transformers>=3.0"]
notebooks = ["plotly>=5.18", "ipykernel>=6.0", "nbformat>=5.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
